[package]
name = "constellation-server"
version = "1.12.6"
description = "Pluggable authoritative DNS server. Entries can be added & removed from an HTTP REST API."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/constellation"
repository = "https://github.com/valeriansaliou/constellation.git"
keywords = ["dns", "api"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "constellation"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
toml = "0.5"
clap = { version = "2.33", default-features = false }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = { version = "0.2", default-features = false }
base64 = "0.13"
regex = "1.3"
r2d2 = "0.8"
r2d2_redis = "0.11"
redis = "0.12"
rocket = { version = "0.4", default-features = false }
rocket_contrib = { version = "0.4", features = ["json"], default-features = false }
trust-dns = { version = "0.13", default-features = false }
trust-dns-server = { version = "0.13", default-features = false }
trust-dns-resolver = { version = "0.9", default-features = false }
rand = "0.8"
farmhash = "1.1"
http_req = { version = "0.5", features = ["rust-tls"], default-features = false }
maxminddb = "0.17"
tempfile = "3.1"
flate2 = "1.0"
tar = "0.4"

# Override 'socket2', dependended by 'trust-dns-resolver' due to \
#   incompatibility on versions >= 0.3.12
socket2 = "=0.3.11"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
