[package]
name = "constellation-server"
version = "1.14.1"
description = "Pluggable authoritative DNS server. Entries can be added & removed from an HTTP REST API."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/constellation"
repository = "https://github.com/valeriansaliou/constellation.git"
keywords = ["dns", "api"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "constellation"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
toml = "0.5"
clap = { version = "2.33", default-features = false }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = { version = "0.2", default-features = false }
regex = "1.3"
r2d2 = "0.8"
r2d2_redis = "0.11"
redis = "0.12"
actix-web = { version = "3.3", default-features = false }
actix-web-httpauth = "0.5"
trust-dns = { version = "0.14", default-features = false }
trust-dns-server = { version = "0.14", default-features = false }
trust-dns-proto = { version = "0.4", default-features = false }
trust-dns-resolver = { version = "0.10", default-features = false }
futures = "0.1"
tokio = "0.1"
tokio-tcp = "0.1"
tokio-udp = "0.1"
rand = "0.8"
farmhash = "1.1"
http_req = { version = "0.7", features = ["rust-tls"], default-features = false }
maxminddb = "0.21"
tempfile = "3.1"
flate2 = "1.0"
tar = "0.4"

[patch.crates-io]
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "aa64e2fb33755c696337d443ac4e8af93551ad05" }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
strip = true
