[package]
name = "constellation-server"
version = "1.14.3"
description = "Pluggable authoritative DNS server. Entries can be added & removed from an HTTP REST API."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/constellation"
repository = "https://github.com/valeriansaliou/constellation.git"
keywords = ["dns", "api"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "constellation"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
toml = "0.8"
clap = { version = "4.5", features = ["std", "cargo"] }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = { version = "0.2", default-features = false }
regex = "1.10"
async-trait = "0.1"
bb8-redis = "0.15"
actix-web = { version = "4.8", default-features = false, features = ["macros"] }
actix-web-httpauth = "0.8"
hickory-server = { version = "0.24", default-features = false }
hickory-proto = { version = "0.24", default-features = false, features = [
    "text-parsing",
] }
hickory-resolver = { version = "0.24", default-features = false, features = [
    "tokio-runtime",
] }
tokio = "1.38"
rand = "0.8"
farmhash = "1.1"
http_req = { version = "0.10", features = [
    "rust-tls",
], default-features = false }
maxminddb = "0.24"
tempfile = "3.1"
flate2 = "1.0"
tar = "0.4"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
strip = true
